Fix readability of accordion titles

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -130,3 +130,7 @@ h1, .h1 {
 .svg-inline--fa {
   margin: 0 0.5rem;
 }
+
+button {
+  word-spacing: 0.1em;
+}
